--- a/templates/item/item-medicine-sheet.hbs
+++ b/templates/item/item-medicine-sheet.hbs
@@ -30,7 +30,7 @@
   <section class="sheet-body">
     {{!-- Description Tab --}}
       <div class="tab" data-group="primary" data-tab="description">
-       {{editor system.description target="system.description" button=true engine="prosemirror"}}
+       {{editor system.description target="system.description" button=false engine="prosemirror"}}
       </div>
     {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
