--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -215,7 +215,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>{{ item.system.ammo.type }}</td>
+                                        <td>{{ item.system.ammo.type }} / {{ item.system.energyWeapon }}</td>
                                         <td>{{ item.system.ammo.consumes.amount }}</td>
                                         <td>
                                             <select style="width:100%;" data-set-ammo data-weapon-id="{{ item._id }}">
@@ -240,7 +240,7 @@
                                             {{ item.system.ammo.capacity.max }}
                                         </td>
                                         <td>
-                                            <div class='fakebutton' data-reload data-weapon-id="{{ item._id }}">RELOAD</div class='fakebutton'>
+                                            <div title="Reloaded {{ system.reloadDecay }} Times | 10 Reloads = 1 Level of Decay" class='fakebutton' data-reload data-weapon-id="{{ item._id }}">RELOAD</div class='fakebutton'>
                                         </td>
                                         <td>
                                             {{#each item.ammos as |ammo|}}
