--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -215,7 +215,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>{{ item.system.ammo.type }} / {{ item.system.energyWeapon }}</td>
+                                        <td>{{ item.system.ammo.type }}</td>
                                         <td>{{ item.system.ammo.consumes.amount }}</td>
                                         <td>
                                             <select style="width:100%;" data-set-ammo data-weapon-id="{{ item._id }}">
