Added Monster Loot Rolls
Longer descriptiong ;)

--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -160,6 +160,13 @@
                           </td>
                         </tr>
                         <tr></tr>
+                        <tr>
+                          <td>
+                              <div class = "fakebutton" data-npc-loot title="Send loot to chat">
+                                  <i class="fa-regular">LOOT</i>
+                              </div>
+                          </td>
+                      </tr>
                       </table>
                     </td>
                   </tr>
