--- a/templates/item/item-background-sheet.hbs
+++ b/templates/item/item-background-sheet.hbs
@@ -25,9 +25,9 @@
   <section class="sheet-body">
     {{!-- Description Tab --}}
       <div class="tab htmlfield" data-group="primary" data-tab="description">
-          <input class="mediuminput" type="text" name="system.skill1.value" value="{{system.skill1.value}}" />
-          <input class="mediuminput" type="text" name="system.skill2.value" value="{{system.skill2.value}}" />
-          <input class="mediuminput" type="text" name="system.skill3.value" value="{{system.skill3.value}}" />
+          <input class="mediuminput" type="text" name="system.skill1.value" value="{{system.skill1.value}}" hidden />
+          <input class="mediuminput" type="text" name="system.skill2.value" value="{{system.skill2.value}}" hidden />
+          <input class="mediuminput" type="text" name="system.skill3.value" value="{{system.skill3.value}}" hidden />
           {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
           {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
       </div>
