Adding Room Loot
Both Custom and Random should be working, but they do require the new Compendiums I sent over Discord Chat, if someone could please upload those. Ty!

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -241,6 +241,13 @@
                                 </td>
                               </tr>
                             </table>
+                            <tr>
+                              <td>
+                                  <div class = "fakebutton" data-pc-loot title="Player loots a room or container">
+                                      <i class="fa-regular">ROOM LOOT</i>
+                                  </div>
+                              </td>
+                            </tr>
                           </td>
                         </tr>
                       </table>
